--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                   </p>
 
                   <div class="social-buttons">
-                     <button >
-                        <a href="https://www.linkedin.com/in/mariame-bah-3b3a76144/" target="_blank" style="color: #000;">Linkdin</a>
+                     <button style="background-color: #000; border: solid 1px #000;" >
+                        <a href="https://www.linkedin.com/in/mariame-bah-3b3a76144/" target="_blank"  style="color: #fff;">Linkedin</a>
                      </button>
-                     <button>
-                        <a href="https://github.com/mariamebah4582" target="_blank" style="color: #000;">Github</a>
+                     <button style="background-color: #000; border: solid 1px #000;">
+                        <a href="https://github.com/mariamebah4582" target="_blank" style="color: #fff; ">Github</a>
                      </button>
                   </div>
                   
